--- a/.hintrc
+++ b/.hintrc
@@ -6,9 +6,21 @@
     "axe/forms": [
       "default",
       {
-        "label": "off"
+        "label": "off",
+        "select-name": "off"
       }
     ],
-    "button-type": "off"
+    "button-type": "off",
+    "axe/name-role-value": "off",
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "height: fit-content"
+        ]
+      }
+    ],
+    "no-inline-styles": "off",
+    "meta-viewport": "off"
   }
 }
