--- a/.hintrc
+++ b/.hintrc
@@ -16,7 +16,8 @@
       "default",
       {
         "ignore": [
-          "height: fit-content"
+          "height: fit-content",
+          "width: fit-content"
         ]
       }
     ],
