--- a/.hintrc
+++ b/.hintrc
@@ -22,6 +22,13 @@
       }
     ],
     "no-inline-styles": "off",
-    "meta-viewport": "off"
+    "meta-viewport": "off",
+    "axe/structure": [
+      "default",
+      {
+        "listitem": "off"
+      }
+    ],
+    "detect-css-reflows/composite": "off"
   }
 }
